final/styles/base.css
:root {
    --main-color: rgb(169, 209, 242);
    --secondary-color: rgb(245, 245, 245);
    --accent-color-one: rgb(52, 77, 127);
    --accent-color-two: rgb(139, 0, 0);
}

* {
    margin: 0;
    padding: 0;
    font-family: "Roboto";
}

header span {
    font-weight: bold;
    font-size: 25px;
}

.head-container {
    background-color: var(--main-color);
    display: grid;
    grid-template-columns: 15% 1fr 15%;
    text-align: center;
    align-items: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

header img {
    min-width: 3rem;
    margin-left: 12px;
    margin-bottom: 5px;
}

#ham-button {
    background: none;
    border: none;
    cursor: pointer;
}

#ham-button::after {
    content: "\2630";
    font-size: 2.5rem;
}

#ham-button.show::after {
    content: "\00D7";
    font-size: 3rem;
}

#navi {
    display: none;
}

#navi.show {
    display: block;
}

#navi ul {
    background-color: var(--secondary-color);
}

#navi li {
    list-style: none;
    font-size: 1.5rem;
}

#navi .current a {
    background-color: var(--accent-color-one);
    color: rgb(255, 255, 255);
}

#navi a {
    display: block;
    text-decoration: none;
    padding: 1rem;
    color: rgb(0, 0, 0);
    text-align: center;
    border-bottom: 1px solid var(--accent-color-one);
}

#navi a:hover {
    text-decoration: underline;
    background-color: var(--main-color);
}

.hero {
    display: block;
    width: 100%;
    height: auto;
}

main {
    background-color: var(--secondary-color);
}

.weatherContainer {
    text-align: center;
    padding-bottom: 2rem;
}

h1 {
    text-align: center;
    padding-top: 2rem;
    color: var(--accent-color-one);
}

.intro {
    padding: 2rem;
}

.links {
    display: flex;
    flex-direction: column;
    text-align: center;
    border-top: 1px solid var(--accent-color-one);
    border-bottom: 1px solid var(--accent-color-one);
}

.infoLink,
.joinLink {
    padding: 2rem;
}

.infoLink li,
.joinLink li {
    list-style: none;
    margin-top: 2rem;
    text-align: center;
    padding-bottom: 1rem;
}

.infoLink a,
.joinLink a {
    text-decoration: none;
    background-image: linear-gradient(var(--main-color), rgb(125, 164, 209));
    padding: 12px;
    color: rgb(0, 0, 0);
    font-weight: bold;
    border: 2px solid var(--accent-color-one);
    border-radius: 0.5rem;
}

.infoLink a:active,
.joinLink a:active {
    background-image: none;
    background-color: var(--accent-color-one);
    color: rgb(255, 255, 255);
    border: 2px solid rgb(0, 0, 0);
}

footer {
    background-color: var(--main-color);
    padding: 2rem;
    text-align: center;
}

.socials a img {
    width: 36px;
    height: 36px;
    padding: 1rem;
}

.joinMain {
    margin-left: 20px;
}

.firstN,
.lastN,
.emailAddress,
.newsletter,
.goals {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.firstN input,
.lastN input,
.emailAddress input {
    width: 70%;
    height: 44px;
}

.goals textarea {
    width: 70%;
    height: 125px;
}

.firstN label,
.lastN label,
.emailAddress label,
.newsletter p,
.goals label {
    display: block;
    font-size: 20px;
    margin-bottom: 6px;
}

.newsletter label {
    display: flex;
    align-items: center;
    margin-top: 1rem;
    margin-bottom: 1.5rem;
}

.newsletter input {
    width: 44px;
    height: 44px;
    margin-right: 15px;
}

.colorChange {
    color: var(--accent-color-two);
}

.req {
    color: var(--accent-color-two);
    font-style: italic;
    margin-top: 1rem;
}

.styleChange {
    font-style: italic;
}

.submitButton {
    width: 70%;
    height: 44px;
    margin-top: 1rem;
    margin-bottom: 2rem;
    background-color: var(--accent-color-one);
    border-radius: 7px;
    color: rgb(255, 255, 255);
    font-size: 20px;
}

#recipt {
    padding: 2rem;
    text-align: center;
}

#recipt p {
    padding: .7rem;
}

.about-desc {
    padding: 2rem 1rem;
    border-bottom: 1px solid var(--accent-color-one);
}

.about-container {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.about-container img {
    width: 50%;
    height: auto;
    margin-top: 2rem;
    box-shadow: 0 0 15px var(--accent-color-one);
}

.eventCards {
    padding-top: 2rem;
}

.eventCards div {
    padding: 2rem;
    margin-bottom: 2rem;
    background-color: var(--main-color);
    text-align: center;
    width: 80%;
    border: 1px solid var(--accent-color-one);
    border-radius: 15px;
}

.eventCards div p {
    padding-bottom: 1rem;
    font-size: 20px;
    font-weight: bold;
}

#openButton1,
#openButton2 {
    padding: .7rem;
    width: 70%;
    background-color: var(--secondary-color);
    border: 1px solid var(--accent-color-one);
    border-radius: 15px;
    font-size: 15px;
}

#openButton1:hover,
#openButton2:hover,
#closeButton:hover {
    cursor: pointer;
    background-color: rgb(225, 225, 225);
}

#eventDialogContainer {
    margin: auto;
}

.dialogContainer {
    display: flex;
    padding: 2rem;
}

.dialogContainer p {
    padding: .5rem;
}

#closeButton {
    padding: 1.5rem;
    height: 100px;
    margin-left: 10px;
    background-color: var(--secondary-color);
    font-size: 1rem;
}

.buttonContainer {
    border-top: 1px solid var(--accent-color-one);
    padding: 2rem;
}

.buttonContainer button {
    padding: 1rem;
    margin-right: 12px;
    background-color: var(--main-color);
    font-size: 15px;
    margin-top: 15px;
}

.buttonContainer button:hover {
    background-color: rgb(131, 176, 214);
    cursor: pointer;
}

#VisitTime {
    text-align: center;
    padding-top: 1rem;
    color: var(--accent-color-two);
    font-style: italic;
}

#aboutCard section {
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    padding: 2rem;
    font-size: 14px;
    border: 1px solid rgb(62, 62, 62)
}

#aboutCard p {
    margin-left: 1rem;
}

#aboutCard h2 {
    font-size: 1rem;
}

#aboutCard section:nth-child(even) {
    background-color: rgb(230, 229, 229);
}

.videoLink {
    color: rgb(0, 0, 0);
    font-size: 20px;
}

#aPrompt,
.prompt {
    color: var(--accent-color-one);
    font-style: italic;
    text-align: center;
    font-size: 20px;
    padding-bottom: 2rem;
}

